--- a/front/src/style/main.css
+++ b/front/src/style/main.css
@@ -30919,6 +30919,23 @@ video {
   outline-offset: 2px;
 }
 
+.btn-yellow-tag:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
+}
+
+.btn-yellow-tag:active {
+  --tw-bg-opacity: 1;
+  background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
+}
+
+.btn-yellow-tag:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 /* btn-gray */
 
 .btn-gray {
@@ -31117,6 +31134,13 @@ video {
   padding-left: 2rem;
 }
 
+.users-li a {
+  display: block;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+}
+
 /* 會員表單的li hover */
 
 .users-li:hover {
@@ -31149,6 +31173,8 @@ video {
 .users-li:hover .submenu {
   display: block;
   max-height: 100%;
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
   opacity: 1;
 }
 
@@ -31159,6 +31185,47 @@ video {
   border-color: rgba(251, 191, 36, var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgba(251, 191, 36, var(--tw-text-opacity));
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.userIcons {
+  margin-right: 1.25rem;
+  margin-left: 1.25rem;
+  display: inline-block;
+  height: 1.75rem;
+  width: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
+
+/* TODO: btn-yellow-tag by Sarah */
+
+.btn-yellow-tag {
+  border-radius: 9999px;
+  border-width: 1px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgba(251, 191, 36, var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  text-transform: uppercase;
+  --tw-text-opacity: 1;
+  color: rgba(31, 41, 55, var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 150ms;
+  transition-timing-function: linear;
 }
 
 @media (min-width: 640px) {
