--- a/front/src/style/tailwind.css
+++ b/front/src/style/tailwind.css
@@ -38,6 +38,23 @@
     @apply outline-none;
 }
 
+/* btn-yellow-hollow*/
+.btn-yellow-hollow {
+    @apply text-yellow-400 bg-transparent border border-solid border-yellow-300 uppercase text-base px-4 py-2 rounded-full outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+}
+
+.btn-yellow-hollow:hover {
+    @apply bg-yellow-400 text-gray-800;
+}
+
+.btn-yellow-hollow:active {
+    @apply bg-yellow-600;
+}
+
+.btn-yellow-hollow:focus {
+    @apply outline-none;
+}
+
 /* btn-yellow */
 .btn-yellow {
     @apply text-gray-800 bg-yellow-400 border border-solid border-yellow-400 uppercase text-base
