--- a/front/src/style/custom.css
+++ b/front/src/style/custom.css
@@ -10,6 +10,6 @@ body::-webkit-scrollbar {
 body {
     -ms-overflow-style: none;
     height: 100%;
-    width: calc(100vw + 18px);
+    /* width: calc(100vw + 18px); */
     overflow: auto;
 }
