--- a/front/src/style/tailwind.css
+++ b/front/src/style/tailwind.css
@@ -164,7 +164,10 @@
 }
 
 /* 會員表單的li樣式 */
-.users-li a {
+.user-p {
+    @apply pl-8 py-2.5 block;
+}
+.user-li {
     @apply pl-8 py-2.5 block;
 }
 /* 會員表單的li hover */
