--- a/front/src/style/tailwind.css
+++ b/front/src/style/tailwind.css
@@ -215,3 +215,8 @@
 .user-page-title{
     @apply text-2xl font-bold;
 }
+
+/* input會員樣式 */
+.input-style {
+    @apply appearance-none bg-transparent w-full text-white mr-3 py-1 px-2 leading-tight border-b border-gray-700 focus:outline-none focus:border-yellow-400;
+}
