--- a/front/src/style/custom.css
+++ b/front/src/style/custom.css
@@ -14,3 +14,20 @@ body {
     overflow: auto;
 }
 
+/* Nav 選單，先設定成透明度 0，寬度為 0 */
+.nav-show {
+    opacity: 0;
+    width: 0;
+    transition: all 0.5s ease;
+}
+/* 讓 checkbox 的框消失 */
+#nav-toggle {
+    /* visibility: hidden;
+    opacity: 0; */
+}
+
+/* 當 checkbox 被 check 時讓 Nav 選單出現，並把寬度設為 100%，因此 Nav 選單會有種展開的感覺 */
+#nav-toggle:checked ~ .nav-show {
+    opacity: 1;
+    width: 100%;
+}
