--- a/front/src/style/custom.css
+++ b/front/src/style/custom.css
@@ -14,3 +14,8 @@ body {
     overflow: auto;
 }
 
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
+}
