--- a/front/src/style/custom.css
+++ b/front/src/style/custom.css
@@ -14,9 +14,15 @@ body {
     overflow: auto;
 }
 
-.line-clamp {
+.line-clamp-3 {
   display: -webkit-box;
   -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
+}
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;  
 }
 
