修改會員資料調整 nav頭像調整 新增V    修改會員資料調整 頭像調整 新增navㄧㄤ    修改會員資料調整 頭像調整 新增nav樣式

--- a/front/src/style/tailwind.css
+++ b/front/src/style/tailwind.css
@@ -244,3 +244,10 @@
 .avatar-change {
     @apply hover:bg-gray-700;
 }
+/* navmenu樣式 */
+.navmenu:hover .submenu {
+    @apply block;
+}
+.navmenu:hover .submenu:hover {
+    @apply block bg-yellow-400 text-black;
+}
