--- a/front/src/style/tailwind.css
+++ b/front/src/style/tailwind.css
@@ -223,7 +223,7 @@
 }
 /* 會員表單react icons樣式 */
 .userIcons {
-    @apply w-5 h-5 text-yellow-400 inline-block;
+    @apply w-5 h-5 text-yellow-400 mx-5 inline-block;
 }
 
 /* TODO: btn-yellow-tag by Sarah */
