--- a/front/src/style/custom.css
+++ b/front/src/style/custom.css
@@ -12,6 +12,15 @@
     right: -17px;
     overflow-y: scroll;
 }
+.innerbot-container {
+    position: absolute;
+    /*這四個方向的位置要寫全，否則不生效*/
+    top: 0;
+    left: 0;
+    bottom: -17px;
+    right: -17px;
+    overflow-y: scroll;
+}
 
 .line-clamp-3 {
     display: -webkit-box;
@@ -20,9 +29,9 @@
 }
 
 .line-clamp-2 {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;  
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .commentInput {
